# ros2_ws

./: frames.gv
install/: local_setup.sh  setup.sh
install/simple_robot_description/lib/simple_robot_description/: l_shape_driver.py  odom_tf_broadcaster.py  tf_broadcaster.py
install/simple_robot_description/share/simple_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/simple_robot_description/share/simple_robot_description/cmake/: simple_robot_descriptionConfig-version.cmake  simple_robot_descriptionConfig.cmake
install/simple_robot_description/share/simple_robot_description/environment/: ament_prefix_path.dsv  path.dsv
install/simple_robot_description/share/simple_robot_description/launch/: gazebo.launch.py  l_shape_drive.launch.py  rtab_map_mono.launch.py
install/simple_robot_description/share/simple_robot_description/launch/install/: COLCON_IGNORE  (+11 more)
install/simple_robot_description/share/simple_robot_description/urdf/: simple_robot.xacro
log/: latest_build  latest_list
src/simple_robot_description/: CMakeLists.txt
src/simple_robot_description/config/: slam_params.yaml
src/simple_robot_description/launch/: gazebo.launch.py  l_shape_drive.launch.py  rtab_map_mono.launch.py
src/simple_robot_description/launch/install/: setup.ps1  setup.sh  setup.zsh
src/simple_robot_description/scripts/: l_shape_driver.py
src/simple_robot_description/urdf/: simple_robot.xacro
src/simple_robot_description/worlds/: room_with_obstacles.world
(+5 files in other folders)
